--- a/force/force.css
+++ b/force/force.css
@@ -1,29 +1,132 @@
-rect.node {
-    stroke: black;
-    stroke-width: 1.5px;
+body {
+    overflow: hidden;
+    margin: 0px;
+    display: flex;
 }
 
-rect.node.switch {
+#divider {
+    width: 1px;
+    background: darkgray;
+}
+
+#mousecapture {
+    fill: none;
+    pointer-events: all;
+}
+
+.node {
+    stroke: black;
+    stroke-width: 1.5px;
+    cursor: move;
+    fill: white;
+}
+
+.node.switch {
     fill: lightblue;
 }
 
-rect.node.host {
-    fill: green;
+.node.host {
+    fill: lightgreen;
 }
 
-line.link {
-    stroke-opacity: .6;
+.nodegroup text {
+    text-anchor: middle;
+    dominant-baseline: middle;
+    cursor: move;
+}
+
+.nodegroup.selected rect {
+    stroke: steelblue;
+    stroke-width: 4.5px;
+}
+
+.link, .link.low_bandwidth {
+    stroke-width: 5;
+}
+
+.link.up, .link.low_util {
     stroke: green;
 }
 
-line.link.up {
+.link.med_util {
+    stroke: yellow;
+}
+
+.link.high_util {
+    stroke: red;
+}
+
+.link.down {
+    stroke-opacity: .5;
     stroke: gray;
 }
 
-line.link.down {
-    stroke: red;
+.link.med_bandwidth {
+    stroke-width: 10;
+}
+
+.link.high_bandwidth {
+    stroke-width: 15;
+}
+
+.linkgroup text.link-name {
+    text-anchor: middle;
+}
+
+.linkgroup text.link-stats  {
+    text-anchor: middle;
 }
 
 text {
     font-family: sans-serif;
+}
+
+rect.context_menu_bg {
+    fill: white;
+    stroke: black;
+}
+
+rect.context_item_bg {
+    opacity: 0;
+}
+
+rect.context_item_bg.selected {
+    opacity: 0.5;
+}
+
+#no_ws {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background: gray;
+    opacity: 0.85;
+}
+
+#no_ws span {
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    height: 0;
+    position: fixed;
+    font-size: 2em;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+#sidebar {
+    width: 25%;
+}
+
+#content {
+    width: 75%;
+}
+
+h2 {
+    font-family: sans-serif;
+    font-size: 2em;
+    margin-top: 0;
 }
