--- a/force/force.css
+++ b/force/force.css
@@ -129,4 +129,9 @@ h2 {
     font-family: sans-serif;
     font-size: 2em;
     margin-top: 0;
+    margin-bottom: .5em;
+}
+
+div.action {
+    margin-left: 1em;
 }
